--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "public"]
 	path = public
-	url = git@github.com:wuxiyang1996/wuxiyang1996.github.io
-	branch = main
+	url = https://github.com/wuxiyang1996/wuxiyang1996.io.git
+	branch = master
