--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "public"]
 	path = public
-	url = https://github.com/wuxiyang1996/wuxiyang1996.io.git
+	url = https://github.com/wuxiyang1996/wuxiyang1996.github.io.git
 	branch = master
